reversed the changes for azure
