# server/swagger_output.json
@@ -349,6 +349,16 @@
           }
         }
       }
+    },
+    "/test": {
+      "get": {
+        "description": "test",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
     }
   }
 }
